--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -16,7 +16,7 @@
             <div class="col-lg-6 col-md-8 mx-auto">
 
 
-                <h4> Edenthought...Simplicity at it's finest. </h4>
+                <h4> JakariaEcommerce...Simplicity at it's finest. </h4>
 
 
                 <br>
@@ -31,7 +31,7 @@
 
                 <br>
 
-                <a href="#" class="btn btn-primary my-2"> Create an account </a>
+                <a href="{% url 'register' %}" class="btn btn-primary my-2"> Create an account </a>
 
 
             </div>
